// brew install protobuf

syntax = "proto3";
package tinycache;

option go_package = "github.com/at15/tinycache/proto";

// A generic response that applies to all operations.
// Empty right now because we only return something when
// there is error
message EmptyResponse {
}

message GetRequest {
    string bucket = 1;
    string key = 2;
}

message GetResponse {
    bytes value = 1;
}

message SetRequest {
    string bucket = 1;
    string key = 2;
    bytes value = 3;
    int32 ttl_ms = 4; // ttl in miliseconds
}

message DeleteRequest {
    string bucket = 1;
    string key = 2;
}

service TinyCache {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (EmptyResponse) {}
    rpc Delete(DeleteRequest) returns (EmptyResponse) {}
}